Change argument names to be more easily recognizable ones

--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
 
 1. 05/24/2018
-  Change argument names to be more easily recognizable ones.                    Not yet
+  Change argument names to be more easily recognizable ones.                      Done
